@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-08T16:14:34Z",
-  "count" : 10,
-  "count_minmax" : [ 9, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 9,
-  "uniques_minmax" : [ 8, 9 ],
-  "uniques_decinc" : [ -0, +9 ]
+  "timestamp" : "2023-10-22T08:14:18Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 10 ],
+  "count_decinc" : [ -9, +10 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 9 ],
+  "uniques_decinc" : [ -8, +9 ]
 }
