@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-21T16:14:41Z",
+  "timestamp" : "2023-10-22T08:14:18Z",
   "count_outdated" : 3075,
   "uniques_outdated" : 1257,
-  "count" : 3245,
-  "uniques" : 1347,
+  "count" : 3246,
+  "uniques" : 1348,
   "clones" : [
     {
       "timestamp": "2023-10-08T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 9, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 9,
-      "uniques_minmax": [ 8, 9 ],
-      "uniques_decinc": [ 0, 9 ]
+      "count": 1,
+      "count_minmax": [ 1, 10 ],
+      "count_decinc": [ 9, 10 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 9 ],
+      "uniques_decinc": [ 8, 9 ]
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
