@@ -1,11 +1,11 @@
 {
-  "count": 170,
-  "uniques": 62,
+  "count": 162,
+  "uniques": 57,
   "clones": [
     {
       "timestamp": "2023-10-08T00:00:00Z",
-      "count": 10,
-      "uniques": 9
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-10-21T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-22T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
