@@ -1,3 +1,12 @@
+2023-10-22T08:14:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6602626647 # 2010
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
+* notice: last 14d: unq all: 57 162
+* notice: prev accum: outdated-unq outdated-all / unq all: 1257 3075 / 1347 3245
+* notice: next accum: outdated-unq outdated-all / unq all: 1257 3075 / 1348 3246
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -8 -9 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-08 2023-10-22]
+
 2023-10-21T16:14:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6598395774 # 2008
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
